--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/emadurandal/spinel#readme",
   "devDependencies": {
+    "ecstatic": ">=4.1.3",
     "http-server": "^0.12.3",
     "typescript": "^4.2.4"
   }
